logs/Slang/chapter-6/6.6.8--interconnect.sv.log
name: interconnect
description: generic interconnect tests
should_fail: 0
tags: 6.6.8
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.6.8--interconnect.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.6.8--interconnect.sv:8:2: error: expected member
	interconnect bus;
	^~~~~~~~~~~~
